--- a/코딩 테스트/인공지능.ipynb
+++ b/코딩 테스트/인공지능.ipynb
@@ -2,283 +2,135 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "이미지 배치(Batch)의 형태(shape): torch.Size([32, 3, 224, 224])\n",
-      "레이블 배치(Batch)의 형태(shape): torch.Size([32])\n",
-      "첫 번째 이미지의 레이블: 5\n"
+      "'microsoft/deberta-v3-large' 토크나이저를 다운로드합니다...\n"
      ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from PIL import Image\n",
-    "import torch\n",
-    "from torch.utils.data import Dataset, DataLoader, random_split\n",
-    "import torchvision.transforms as transforms\n",
-    "\n",
-    "\n",
-    "class CustomImageDataset(Dataset):\n",
-    "    def __init__(self, root_dir, transform=None):\n",
-    "        self.root_dir = root_dir\n",
-    "        self.transform = transform \n",
-    "        self.image_paths = []\n",
-    "        self.labels = []\n",
-    "        \n",
-    "        class_names = sorted([d for d in os.listdir(root_dir) if os.path.isdir(os.path.join(root_dir, d))])\n",
-    "        # class_names = sorted(os.listdir(root_dir))\n",
-    "        \n",
-    "        self.class_to_idx = {class_name: i for i, class_name in enumerate(class_names)}\n",
-    "        \n",
-    "        for class_name in class_names:\n",
-    "            class_path = os.path.join(root_dir, class_name)\n",
-    "            for image_name in os.listdir(class_path):\n",
-    "                if image_name.lower().endswith((\".png\", '.jpg', '.jpeg')):\n",
-    "                    self.image_paths.append(os.path.join(class_path, image_name))\n",
-    "                    self.labels.append(self.class_to_idx[class_name])\n",
-    "                    \n",
-    "    def __len__(self):\n",
-    "        return len(self.image_paths)\n",
-    "    \n",
-    "    def __getitem__(self, idx):\n",
-    "        image_path = self.image_paths[idx]\n",
-    "        image = Image.open(image_path).convert(\"RGB\")\n",
-    "        label = self.labels[idx]\n",
-    "        \n",
-    "        if self.transform:\n",
-    "            image = self.transform(image)\n",
-    "            \n",
-    "        return image, label\n",
-    "\n",
-    "\n",
-    "data_transforms = transforms.Compose([\n",
-    "    transforms.Resize((224, 224)),\n",
-    "    transforms.ToTensor(),\n",
-    "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-    "                         std=[0.229, 0.224, 0.225])\n",
-    "])\n",
-    "\n",
-    "data_path = \"data/output_frames/\"\n",
-    "\n",
-    "custom_dataset = CustomImageDataset(root_dir=data_path, transform=data_transforms)\n",
-    "\n",
-    "dataset_size = len(custom_dataset)\n",
-    "train_size = int(dataset_size * 0.8)\n",
-    "test_size = dataset_size - train_size\n",
-    "\n",
-    "train_dataset, test_dataset = random_split(custom_dataset, [train_size, test_size])\n",
-    "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=0) \n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=True, num_workers=0) \n",
-    "\n",
-    "image, labels = next(iter(train_loader))\n",
-    "print(f\"이미지 배치(Batch)의 형태(shape): {image.shape}\")\n",
-    "print(f\"레이블 배치(Batch)의 형태(shape): {labels.shape}\")\n",
-    "print(f\"첫 번째 이미지의 레이블: {labels[0]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "741ac8c0697948a0b4d7a8ca778065c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "torch.Size([32, 10])"
+       "tokenizer_config.json:   0%|          | 0.00/52.0 [00:00<?, ?B/s]"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import torch.nn as nn\n",
-    "\n",
-    "class SimpleCNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.conv1 = nn.Conv2d(3, 32, kernel_size=3, padding=1)\n",
-    "        self.conv2 = nn.Conv2d(32, 64, kernel_size=3, padding=1)\n",
-    "        \n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.pool = nn.MaxPool2d(kernel_size=2, stride=2)\n",
-    "\n",
-    "        self.flatten = nn.Flatten()\n",
-    "        \n",
-    "        self.fc1 = nn.Linear(64*56*56, 512)\n",
-    "        self.fc2 = nn.Linear(512, 10)\n",
-    "        \n",
-    "    def forward(self, x):\n",
-    "        x = self.conv1(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        x = self.conv2(x)\n",
-    "        x = self.relu(x)\n",
-    "        x = self.pool(x)\n",
-    "        \n",
-    "        x = self.flatten(x)\n",
-    "        \n",
-    "        x = self.fc1(x)\n",
-    "        x = self.fc2(x)\n",
-    "        \n",
-    "        return x\n",
-    "    \n",
-    "model = SimpleCNN()\n",
-    "x = torch.randn(32, 3, 224, 224)\n",
-    "model(x).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet18, ResNet18_Weights\n",
-    "\n",
-    "# model = resnet18(ResNet18_Weights.DEFAULT)\n",
-    "\n",
-    "# for param in model.parameters():\n",
-    "#     param.requires_grad() = False\n",
-    "    \n",
-    "# num_features = model.fc.in_features\n",
-    "# model.fc = nn.Linear(num_features, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0cf6bc3c31ce46e0b0e194dde0ffa327",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "SimpleCNN(\n",
-       "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-       "  (relu): ReLU()\n",
-       "  (pool): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-       "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
-       "  (fc1): Linear(in_features=4096, out_features=512, bias=True)\n",
-       "  (fc2): Linear(in_features=512, out_features=10, bias=True)\n",
-       ")"
+       "config.json:   0%|          | 0.00/580 [00:00<?, ?B/s]"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import torch.optim as optim\n",
-    "\n",
-    "criterion = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.0001)\n",
-    "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model.to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fe8354cd01c54e4cbf8d8ddd3627e411",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "spm.model:   0%|          | 0.00/2.46M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/rag/lib/python3.9/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch:1, loss : 1.7784260958052047\n",
-      "epoch:2, loss : 1.5587548331531418\n",
-      "epoch:3, loss : 1.462703812610158\n",
-      "epoch:4, loss : 1.4008450547752478\n",
-      "epoch:5, loss : 1.3561384155012457\n"
+      "토크나이저를 './debertav3-large-offline' 폴더에 저장했습니다.\n",
+      "\n",
+      "'microsoft/deberta-v3-large' 모델을 다운로드합니다...\n"
      ]
-    }
-   ],
-   "source": [
-    "def train(model, train_loader, criterion, optimizer, epochs):\n",
-    "    model.train()\n",
-    "    \n",
-    "    for epoch in range(epochs):\n",
-    "        running_loss = 0.0\n",
-    "        for data in train_loader:\n",
-    "            X, y = data\n",
-    "            X, y = X.to(device), y.to(device)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "            \n",
-    "            output = model(X)\n",
-    "            \n",
-    "            loss = criterion(output, y)\n",
-    "            \n",
-    "            loss.backward()\n",
-    "            \n",
-    "            optimizer.step()\n",
-    "            \n",
-    "            running_loss += loss.item()\n",
-    "            \n",
-    "        print(f\"epoch:{epoch+1}, loss : {running_loss / len(train_loader)}\")\n",
-    "            \n",
-    "train(model, train_loader, criterion, optimizer, 5)\n",
-    "            "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22c118b1ee65419398928914adc8c2b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/874M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "018eabaabcaf4b6fae55c7f2762d5259",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/874M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.5579\n",
-      "Precision: 0.5572\n",
-      "Recall: 0.5579\n",
-      "F1 Score: 0.5464\n"
+      "모델을 './debertav3-large-offline' 폴더에 저장했습니다.\n",
+      "\n",
+      "다운로드 완료! 이제 'roberta-base-offline' 폴더를 압축하여 캐글에 업로드하세요.\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support, confusion_matrix\n",
+    "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
-    "def evaluate(model, test_loader):\n",
-    "    model.eval() # 모델을 평가 모드로 설정\n",
-    "    all_preds = []\n",
-    "    all_labels = []\n",
+    "# 1. 다운로드할 모델 이름 설정\n",
+    "model_name = \"microsoft/deberta-v3-large\"\n",
     "\n",
-    "    # 평가 시에는 기울기 계산이 필요 없으므로 no_grad() 사용\n",
-    "    with torch.no_grad():\n",
-    "        for data in test_loader:\n",
-    "            X, y = data\n",
-    "            X, y = X.to(device), y.to(device)\n",
-    "            \n",
-    "            outputs = model(X)\n",
-    "            _, predicted = torch.max(outputs.data, 1)\n",
-    "            \n",
-    "            all_preds.extend(predicted.cpu().numpy())\n",
-    "            all_labels.extend(y.cpu().numpy())\n",
-    "    \n",
-    "    # 1. 평가 지표 계산\n",
-    "    accuracy = accuracy_score(all_labels, all_preds)\n",
-    "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='macro')\n",
-    "    \n",
-    "    \n",
-    "    print(f'Accuracy: {accuracy:.4f}')\n",
-    "    print(f'Precision: {precision:.4f}')\n",
-    "    print(f'Recall: {recall:.4f}')\n",
-    "    print(f'F1 Score: {f1:.4f}')\n",
-    "    \n",
-    "evaluate(model, test_loader)"
+    "# 2. 모델을 저장할 로컬 폴더 이름 설정\n",
+    "save_directory = './debertav3-large-offline'\n",
+    "\n",
+    "# 3. 토크나이저 다운로드 및 저장\n",
+    "print(f\"'{model_name}' 토크나이저를 다운로드합니다...\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer.save_pretrained(save_directory)\n",
+    "print(f\"토크나이저를 '{save_directory}' 폴더에 저장했습니다.\")\n",
+    "\n",
+    "# 4. 다중 선택 모델(Multiple Choice Model) 다운로드 및 저장\n",
+    "print(f\"\\n'{model_name}' 모델을 다운로드합니다...\")\n",
+    "model = AutoModel.from_pretrained(model_name)\n",
+    "model.save_pretrained(save_directory)\n",
+    "print(f\"모델을 '{save_directory}' 폴더에 저장했습니다.\")\n",
+    "\n",
+    "print(\"\\n다운로드 완료! 이제 'roberta-base-offline' 폴더를 압축하여 캐글에 업로드하세요.\")"
    ]
   },
   {
