--- a/코딩 테스트/인공지능.ipynb
+++ b/코딩 테스트/인공지능.ipynb
@@ -2,25 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'microsoft/deberta-v3-large' 토크나이저를 다운로드합니다...\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "741ac8c0697948a0b4d7a8ca778065c4",
+       "model_id": "53a87d6379d74de5acb04f97f4ae9345",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/52.0 [00:00<?, ?B/s]"
+       "tokenizer_config.json:   0%|          | 0.00/443 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -29,12 +31,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0cf6bc3c31ce46e0b0e194dde0ffa327",
+       "model_id": "5c36354ba6bc4a06bf9bbf9d8eb4edb6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "config.json:   0%|          | 0.00/580 [00:00<?, ?B/s]"
+       "sentencepiece.bpe.model:   0%|          | 0.00/5.07M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -43,43 +45,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe8354cd01c54e4cbf8d8ddd3627e411",
+       "model_id": "015f61c53b164ba6ab32437b675323c1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "spm.model:   0%|          | 0.00/2.46M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/miniconda3/envs/rag/lib/python3.9/site-packages/transformers/convert_slow_tokenizer.py:564: UserWarning: The sentencepiece tokenizer that you are converting to a fast tokenizer uses the byte fallback option which is not implemented in the fast tokenizers. In practice this means that the fast version of the tokenizer can produce unknown tokens whereas the sentencepiece version would have converted these unknown tokens into a sequence of byte tokens matching the original piece of text.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "토크나이저를 './debertav3-large-offline' 폴더에 저장했습니다.\n",
-      "\n",
-      "'microsoft/deberta-v3-large' 모델을 다운로드합니다...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22c118b1ee65419398928914adc8c2b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/874M [00:00<?, ?B/s]"
+       "tokenizer.json:   0%|          | 0.00/17.1M [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -88,12 +59,40 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "018eabaabcaf4b6fae55c7f2762d5259",
+       "model_id": "775b20605be94993b4c1221557150818",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "model.safetensors:   0%|          | 0.00/874M [00:00<?, ?B/s]"
+       "special_tokens_map.json:   0%|          | 0.00/279 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a772335817da4255bfa96bf38b788797",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "config.json:   0%|          | 0.00/799 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8b13c89ab99d403d9887556d0dc319e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/1.11G [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -103,34 +102,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "모델을 './debertav3-large-offline' 폴더에 저장했습니다.\n",
-      "\n",
-      "다운로드 완료! 이제 'roberta-base-offline' 폴더를 압축하여 캐글에 업로드하세요.\n"
+      "모델을 'BAAI/bge-reranker-base' 경로에 완벽하게 저장했습니다.\n"
      ]
     }
    ],
    "source": [
-    "from transformers import AutoTokenizer, AutoModel\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import torch\n",
     "\n",
-    "# 1. 다운로드할 모델 이름 설정\n",
-    "model_name = \"microsoft/deberta-v3-large\"\n",
+    "# Re-ranker 모델 로드\n",
+    "save_path = 'BAAI/bge-reranker-base'\n",
+    "reranker_tokenizer = AutoTokenizer.from_pretrained(save_path)\n",
+    "reranker_model = AutoModelForSequenceClassification.from_pretrained(save_path)\n",
     "\n",
-    "# 2. 모델을 저장할 로컬 폴더 이름 설정\n",
-    "save_directory = './debertav3-large-offline'\n",
+    "reranker_model.save_pretrained(save_path)\n",
+    "reranker_tokenizer.save_pretrained(save_path)\n",
     "\n",
-    "# 3. 토크나이저 다운로드 및 저장\n",
-    "print(f\"'{model_name}' 토크나이저를 다운로드합니다...\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "tokenizer.save_pretrained(save_directory)\n",
-    "print(f\"토크나이저를 '{save_directory}' 폴더에 저장했습니다.\")\n",
-    "\n",
-    "# 4. 다중 선택 모델(Multiple Choice Model) 다운로드 및 저장\n",
-    "print(f\"\\n'{model_name}' 모델을 다운로드합니다...\")\n",
-    "model = AutoModel.from_pretrained(model_name)\n",
-    "model.save_pretrained(save_directory)\n",
-    "print(f\"모델을 '{save_directory}' 폴더에 저장했습니다.\")\n",
-    "\n",
-    "print(\"\\n다운로드 완료! 이제 'roberta-base-offline' 폴더를 압축하여 캐글에 업로드하세요.\")"
+    "print(f\"모델을 '{save_path}' 경로에 완벽하게 저장했습니다.\")"
    ]
   },
   {
