--- a/코딩 테스트/코딩테스트.ipynb
+++ b/코딩 테스트/코딩테스트.ipynb
@@ -66,279 +66,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<3, 6, 2, 7, 5, 1, 4>\n"
+      "2\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
     "import heapq\n",
     "\n",
-    "# input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "schedules = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
-    "n = int(input())\n",
+    "schedules.sort(key=lambda x: (x[0], x[1]))\n",
     "\n",
     "heap = []\n",
+    "heapq.heappush(heap, schedules[0][1])\n",
     "\n",
-    "for i in range(n):\n",
-    "    num = int(input())\n",
-    "    if num == 0:\n",
-    "        if len(heap) == 0:\n",
-    "            print(0)\n",
-    "        else:\n",
-    "            print(heapq.heappop(heap))\n",
+    "for i in range(1, N):\n",
+    "    start, end = schedules[i]\n",
+    "    first_classtime = heap[0]\n",
+    "    \n",
+    "    if first_classtime <= start:\n",
+    "        heapq.heappop(heap)\n",
+    "        heapq.heappush(heap, end)\n",
     "    else:\n",
-    "        heapq.heappush(heap, [-num, num])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import heapq\n",
-    "\n",
-    "input = sys.stdin.readline\n",
-    "\n",
-    "n = int(input())\n",
-    "heap = []\n",
-    "\n",
-    "for i in range(n):\n",
-    "    num = int(input())\n",
-    "    if num == 0:\n",
-    "        if len(heap) == 0:\n",
-    "            print(0)\n",
-    "        else:\n",
-    "            print(heapq.heappop(heap)[1])\n",
-    "    else:\n",
-    "        heapq.heappush(heap, [-num, num])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -1\n",
-      "1 1\n",
-      "2 2\n",
-      "3 3\n",
-      "3 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=int(input())\n",
-    "\n",
-    "coords=[]\n",
-    "for i in range(n):\n",
-    "    a, b = map(int, input().split())\n",
-    "    coords.append([a, b])\n",
-    "\n",
-    "coords.sort()\n",
-    "\n",
-    "for i in coords:\n",
-    "    print(i[0], i[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k, n = map(int, input().split())\n",
-    "array = []\n",
-    "for i in range(k):\n",
-    "    array.append(int(input()))\n",
-    "\n",
-    "def binary_search(array, target):\n",
-    "    low = 1\n",
-    "    high = max(array)\n",
-    "    result = 0\n",
-    "\n",
-    "    while low <= high:\n",
-    "        mid = (low + high) // 2\n",
-    "\n",
-    "        count = 0\n",
-    "        for length in array:\n",
-    "            count += length // mid\n",
+    "        heapq.heappush(heap, end)\n",
+    "    \n",
     "        \n",
-    "        # 만약 목표 개수(n) 이상을 만들 수 있다면 더 긴 길이가 가능한지 탐색 (low를 올림)\n",
-    "        if count >= target:\n",
-    "            result = mid\n",
-    "            low = mid + 1\n",
-    "        # 목표 개수를 만들 수 없다면, 길이를 더 짧게 잘라야 함 (high를 내림)\n",
-    "        else:\n",
-    "            high = mid - 1\n",
-    "            \n",
-    "    return result\n",
-    "\n",
-    "answer = binary_search(array, n)\n",
-    "print(answer)"
+    "print(len(heap))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, k = 10, 7\n",
+    "\n",
+    "\n",
+    "nums = [True] * (n + 1)\n",
+    "\n",
+    "def func(n, k):\n",
+    "  count = 0\n",
+    "  \n",
+    "  for i in range(2, int(n ** 0.5) + 1):\n",
+    "      if nums[i]:\n",
+    "          for j in range(i, n + 1, i):\n",
+    "              nums[j] = False\n",
+    "              count += 1\n",
+    "  \n",
+    "              if count == k:\n",
+    "                  return j\n",
+    "\n",
+    "      \n",
+    "print(func(n, k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 9 2 5 4 6 7 8\n",
+      "6 8 2 1 7 9 4 5 3\n",
+      "4 7 5 3 6 8 9 1 2\n",
+      "1 3 8 6 4 7 5 2 9\n",
+      "2 9 4 5 8 1 3 6 7\n",
+      "5 6 7 9 2 3 8 4 1\n",
+      "7 5 6 8 9 2 1 3 4\n",
+      "9 4 1 7 3 5 2 8 6\n",
+      "8 2 3 4 1 6 7 9 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_valid(board, x, y):\n",
+    "    num = board[x][y]\n",
+    "    \n",
+    "    if board[x].count(num) > 1:\n",
+    "        return False\n",
+    "    \n",
+    "    column_count = 0\n",
+    "    for i in range(9):\n",
+    "        if board[i][y] == num:\n",
+    "            column_count += 1\n",
+    "            \n",
+    "    if column_count > 1:\n",
+    "        return False\n",
+    "    \n",
+    "    start_x = (x // 3) * 3\n",
+    "    start_y = (y // 3) * 3\n",
+    "    \n",
+    "    box_count = 0\n",
+    "    for i in range(start_x, start_x + 3):\n",
+    "        for j in range(start_y, start_y + 3):\n",
+    "            if board[i][j] == num:\n",
+    "                box_count += 1\n",
+    "                \n",
+    "    if box_count > 1:\n",
+    "        return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "\n",
+    "def backtracking(board, x, y):\n",
+    "    if y == 9:\n",
+    "        x += 1\n",
+    "        y = 0\n",
+    "        \n",
+    "    if x == 9:\n",
+    "        return board\n",
+    "    \n",
+    "    if board[x][y] != 0:\n",
+    "        return backtracking(board, x, y + 1)\n",
+    "    \n",
+    "    for num in range(1, 9 + 1):\n",
+    "        board[x][y] = num\n",
+    "        \n",
+    "        if is_valid(board, x, y):\n",
+    "            if backtracking(board, x, y + 1):\n",
+    "                return board\n",
+    "    board[x][y] = 0\n",
+    "    \n",
+    "    return False\n",
+    "    \n",
+    "board = [list(map(int, input().split())) for _ in range(9)]\n",
+    "\n",
+    "answer = backtracking(board, 0, 0)\n",
+    "\n",
+    "for row in answer:\n",
+    "    print(*row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "range expected at least 1 argument, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[180]\u001b[39m\u001b[32m, line 48\u001b[39m\n\u001b[32m     43\u001b[39m                                 curr = parent[curr] \n\u001b[32m     45\u001b[39m                             \u001b[38;5;28;01mreturn\u001b[39;00m graph, move_count + \u001b[32m1\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m graph = [\u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28minput\u001b[39m().split())) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[32m     50\u001b[39m visited, move_count = bfs(graph)\n\u001b[32m     52\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m visited:\n",
+      "\u001b[31mTypeError\u001b[39m: range expected at least 1 argument, got 0"
+     ]
+    }
+   ],
    "source": [
     "from collections import deque\n",
     "\n",
-    "def bfs(graph, start):\n",
-    "    visit_order = []\n",
-    "    visited = set()\n",
+    "def bfs(graph):\n",
+    "    visited = [[False for _ in range(len(graph))] for _ in range(len(graph))]\n",
     "    have_to_visit = deque()\n",
     "    \n",
-    "    visited.add(start)\n",
-    "    have_to_visit.append(start)\n",
+    "    x, y = 0, 0\n",
+    "    \n",
+    "    visited[x][y] = True\n",
+    "    have_to_visit.append((x, y, 0))\n",
+    "    \n",
+    "    parent = {}\n",
     "    \n",
     "    while have_to_visit:\n",
-    "        vertex = have_to_visit.popleft()\n",
-    "        visit_order.append(vertex)\n",
+    "        x, y, move_count = have_to_visit.popleft()\n",
     "        \n",
-    "        for node in graph[vertex]:\n",
-    "            if node not in visited:\n",
-    "                visited.add(node) \n",
-    "                have_to_visit.append(node)\n",
-    "                \n",
-    "    return visit_order\n",
-    "\n",
-    "\n",
-    "def dfs(graph, start):\n",
-    "    visit_order = []\n",
-    "    visited = set()\n",
-    "    have_to_visit = deque()\n",
-    "    \n",
-    "    visited.add(start)\n",
-    "    have_to_visit.append(start)\n",
-    "    \n",
-    "    while have_to_visit:\n",
-    "        vertex = have_to_visit.pop()\n",
-    "        visit_order.append(vertex)\n",
+    "        dir_x = [-1, 1, 0, 0]\n",
+    "        dir_y = [0, 0, -1, 1]\n",
     "        \n",
-    "        for node in reversed(graph[vertex]):\n",
-    "            if node not in visited:\n",
-    "                visited.add(node) \n",
-    "                have_to_visit.append(node)\n",
-    "                \n",
-    "    return visit_order"
+    "        for i in range(4):\n",
+    "            dx = x + dir_x[i]\n",
+    "            dy = y + dir_y[i]\n",
+    "            \n",
+    "            if 0 <= dx < len(graph) and 0 <= dy < len(graph):\n",
+    "                if not visited[dx][dy]:\n",
+    "                    if graph[dx][dy] == 1 or graph[dx][dy] == 4:\n",
+    "                        visited[dx][dy] = True\n",
+    "                        have_to_visit.append((dx, dy, move_count+1))\n",
+    "                        parent[(dx, dy)] = (x, y)\n",
+    "                        \n",
+    "                        if graph[dx][dy] == 1:\n",
+    "                            have_to_visit.append((dx, dy, move_count + 1))\n",
+    "                        \n",
+    "                        if graph[dx][dy] == 4:\n",
+    "                            curr = (dx, dy)\n",
+    "                            \n",
+    "                            while curr != (0, 0):\n",
+    "                                cx, cy = curr\n",
+    "                                \n",
+    "                                if graph[cx][cy] != 4:\n",
+    "                                    graph[cx][cy] = 3\n",
+    "                                    \n",
+    "                                curr = parent[curr] \n",
+    "                                \n",
+    "                            return graph, move_count + 1\n",
+    "                       \n",
+    "                    \n",
+    "graph = [list(map(int, input().split())) for _ in range()]\n",
+    "\n",
+    "visited, move_count = bfs(graph)\n",
+    "\n",
+    "for row in visited:\n",
+    "    print(*row)\n",
+    "print()\n",
+    "print(f\"최단 거리 이동 : {move_count} 회\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "N = 10\n",
-    "\n",
-    "board = [1] * (N + 1)\n",
-    "\n",
-    "for i in range(N, -1, -1):\n",
-    "    if i % 3 == 0:\n",
-    "        board[i//3] = min(board[i] + 1, board[i//3])\n",
-    "    if i % 2 == 0:\n",
-    "        board[i//2] = min(board[i] + 1, board[i//2])\n",
-    "    if i - 1 > 0:\n",
-    "        board[i-1] = board[i] + 1\n",
-    "        \n",
-    "board\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n,k = 4, 7\n",
-    "stuffs = [\n",
-    "    [6, 13],\n",
-    "    [4, 8],\n",
-    "    [3, 6],\n",
-    "    [5, 12]\n",
-    "]\n",
-    "\n",
-    "dp = [[0 for _ in range(k+1)] for _ in range(n+1)]\n",
-    "\n",
-    "for i in range(1, n+1):\n",
-    "    weight = stuffs[i][0]\n",
-    "    value = stuffs[i][1]\n",
-    "    \n",
-    "    for j in range(k+1):\n",
-    "        if j < weight:\n",
-    "            dp[i][j] = dp[i-1][j]\n",
-    "        else:\n",
-    "            dp[i][j] = max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1 1 3 3 3 2 2 2\n"
-     ]
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
